--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
         }
 
         body {
-            background-color: #121212;
-            color: #e0e0e0;
+            background-color: #124112;
+            color: #e0eee0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -39,7 +39,7 @@
         }
 
         h1 {
-            color: #ff9800;
+            color: #ff9870;
             margin-bottom: 20px;
             border-bottom: 2px solid #333;
             padding-bottom: 10px;
@@ -48,7 +48,7 @@
         }
 
         p {
-            color: #ccc;
+            color: #ccf;
             margin-bottom: 15px;
             font-size: 1rem;
         }
@@ -61,9 +61,9 @@
 
         input[type="text"] {
             padding: 12px;
-            border: 1px solid #333;
+            border: 1px solid #311;
             background-color: #2c2c2c;
-            color: #fff;
+            color: #eff;
             border-radius: 4px;
             font-size: 16px;
             transition: border-color 0.3s ease, box-shadow 0.3s ease;
@@ -119,7 +119,7 @@
 
 <body>
     <div class="container">
-        <h1>Hello Dosto,<br>Let's make a 2 Tier Application with Flask and MYSQL!</h1>
+        <h1>Hello DevOps,<br>This is a Two Tier application Deployed by ABU ZAR </h1>
         <div class="messages">
             {% for message in messages %}
                 <p>{{ message[0] }}</p>
