--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background-color: #124112;
+            background-color: #124002;
             color: #e0eee0;
             display: flex;
             justify-content: center;
@@ -62,7 +62,7 @@
         input[type="text"] {
             padding: 12px;
             border: 1px solid #311;
-            background-color: #2c2c2c;
+            background-color: #2c2f2c;
             color: #eff;
             border-radius: 4px;
             font-size: 16px;
@@ -119,7 +119,7 @@
 
 <body>
     <div class="container">
-        <h1>Hello DevOps,<br>This is a Two Tier application Deployed by ABU ZAR </h1>
+        <h1>Hello DevOps!!!,<br>This is a Two Tier application Deployed by ABU ZAR </h1>
         <div class="messages">
             {% for message in messages %}
                 <p>{{ message[0] }}</p>
