--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
 
 <body>
     <div class="container">
-        <h1>Hello DevOps!!!,<br>This is a Two Tier application Deployed by ABU ZAR </h1>
+        <h1>Hello DevOps**!**,<br>This is a Two Tier application Deployed by ABU ZAR </h1>
         <div class="messages">
             {% for message in messages %}
                 <p>{{ message[0] }}</p>
